Bug 89064 - FILEOPEN .pptx slide with a comment has no view of notes
Summary: FILEOPEN .pptx slide with a comment has no view of notes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium major
Assignee: Paul Trojahn
URL:
Whiteboard: target:6.0.0 target:5.4.0.1
Keywords: filter:pptx
Depends on:
Blocks: PPTX Notes-View
  Show dependency treegraph
 
Reported: 2015-02-02 21:24 UTC by royden.yates
Modified: 2022-09-12 07:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test .pptx file (51.49 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-02-02 21:24 UTC, royden.yates
Details

Note You need to log in before you can comment on or make changes to this bug.
Description royden.yates 2015-02-02 21:24:59 UTC
Created attachment 113071 [details]
test .pptx file

From at least 4.3.3.2 and still present in 4.4.0.3

Problem description: FILEOPEN, VIEWING

Opening a .pptx file that contains slides with notes and comments (inserted with MS PowerPoint) will result in the slides with the comment not displaying either the slide or the notes in note view. Slides without a comment display the slide and notes just fine in note view. Deleting the comment does not result in notes displaying. 

Steps to reproduce:
1. Open the .pptx file in attachment.
2. See the result in notes mode: slide 2 will display neither slide nor notes in note view. Slide 3 without a comment displays notes just fine

Current behavior: No slide image displayed in note view if slide has comment

Expected behavior: slide image displayed in note view if slide has comment

Comment: this is a collaboration blocker for me and so I must work in Windows
Comment 1 Buovjaga 2015-02-07 20:08:23 UTC
Reproduced.
3.5.0 shows the 3rd slide as blank, too.

Win 7 Pro 64-bit, LibO Version: 4.4.0.3
Build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7
Locale: fi_FI

Version: 4.5.0.0.alpha0+
Build ID: 99c00b090533da9818444be2831b8da0e713e5f9
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-02-04_06:38:53
Locale: fi_FI

Ubuntu 14.10 64-bit
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 2 royden.yates 2015-08-07 23:25:39 UTC
Bug remains in Version: 5.0.0.5

Let me re-iterate - any notes present on a slide with a comment box are not visible under any of the available views.

If comments are used  by collaborators using MS Office, then a LibreOffice user is unable to function  with such .ppx files.
Comment 3 QA Administrators 2016-09-20 10:21:27 UTC Comment hidden (obsolete)
Comment 4 royden.yates 2016-09-20 11:35:27 UTC
Still present on LO 5.2.1.2 Ubuntu 16.04 LTS

Nothing changed since first reported; test file still applies.
Comment 5 Commit Notification 2017-06-20 20:19:30 UTC
Paul Trojahn committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c2da33ead8b093b12ebb9a0ea9c06d156c41a3e6

tdf#89064 Fix import of pages with comments and notes

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Timur 2017-06-21 17:27:16 UTC
Looks like fixed, so I'll mark so.
Comment 7 Commit Notification 2017-06-21 21:04:40 UTC
Paul Trojahn committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=814dbf3624b9e8608882b003d96dfb51fa3634fc&h=libreoffice-5-4

tdf#89064 Fix import of pages with comments and notes

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 nj 2022-09-11 18:55:22 UTC Comment hidden (obsolete)
Comment 9 Buovjaga 2022-09-11 19:09:43 UTC
(In reply to nicholasjoll from comment #8)
> I have this problem in a much later version of Impress, namely 7.3.5.2,
> running on Linux Mint. So, it appears that this rather serious problem has
> resurfaced! (It is a shame, particularly, because, in other respects, I was
> pleasantly surprised how well Impress handled my PowerPoint file).

Then please open a new report for your problem.
Comment 10 nj 2022-09-11 23:15:59 UTC
Thanks. Yet, before I create a new bug bug report, please tell me the following (for, I am having trouble finding this out).

When all works as it should there is a way in which when presenting one sees the notes on one's own screen (as against on the medium being projected upon). What is that way?

I _do_ see the view when I enter the special 'note' view, but that view is not open when I am actually giving the presentation.
Comment 11 Buovjaga 2022-09-12 04:34:55 UTC
(In reply to nicholasjoll from comment #10)
> Thanks. Yet, before I create a new bug bug report, please tell me the
> following (for, I am having trouble finding this out).
> 
> When all works as it should there is a way in which when presenting one sees
> the notes on one's own screen (as against on the medium being projected
> upon). What is that way?
> 
> I _do_ see the view when I enter the special 'note' view, but that view is
> not open when I am actually giving the presentation.

Sorry, I don't know how to answer that.
Comment 12 Timur 2022-09-12 07:15:21 UTC
(In reply to nicholasjoll from comment #10)
> Thanks. Yet, before I create a new bug bug report, please tell me the
> following (for, I am having trouble finding this out).

If you open a new report, See Also connect to this one. 

> When all works as it should there is a way in which when presenting one sees
> the notes on one's own screen (as against on the medium being projected
> upon). What is that way?
> 
> I _do_ see the view when I enter the special 'note' view, but that view is
> not open when I am actually giving the presentation.

You may be referring to Presenter Console (Options-Impress-General-Enable Presenter Console) that is normally available in Impress with 2 monitors, and with some hack with a single monitor only.