tdf#89064 Fix import of pages with comments and notes

importSlide removes the shapes on the page. It was used to import
the comments and authors, which resulted in an empty notes page.

Change-Id: I7d68085b482e5497d46e92328c413c87440714a0